end of first section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,34 @@
     <title>Architectural company </title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header class="hero-section">
+        <div class="upper-section">
+            <div class="upper-section-title">
+                <p>G3 Architects</p>
+            </div>
+            <div class="nav-tools">
+                <ul class="nav-list">
+                    <li>home</li>
+                    <li>about</li>
+                    <li>contact us</li>
+                    <li>login</li>
+                </ul>
+            </div>
+        </div>
+        <div class="banner-text">
+            <h1>Brand New</h1>
+            <h1>Group of Architects</h1>
+            <p>we are here to provide best form engineering. we provide you with top level most talented people in
+            architectural department.</p> 
+            <button>Explore more</button>          
+        </div>
+        <div class="img-banner">
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
+
 </body>
+
 </html>
