--- a/index.html
+++ b/index.html
@@ -34,8 +34,56 @@
         <div class="img-banner">
             <img src="images/banner.png" alt="">
         </div>
-    </header>
+    </header>   
+        <section class="img-text-2">
+            <div class="second-section">
+                <div class="img-second">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="second-text">
+                    <h2><span class="span-1">Quick list</span> <span class="span-2">of Our</span><br> <span class="span-3">Features</span></h2>
+                    <p>There are many things you can find here. we can give you free consultation. We give high level facility. 24/7 advice about basic design and more. </p>
+                    <button>Explore more</button>
+                </div>
+            </div>
+        </section>
+        <section class="img-text-3">
+            <div class="div-main">
+                <div class="main-text">
+                    <div class="text-1">
+                        <h1>Features you will <br> love & enjoy</h1>
+                        <p>our very own feature of helping all the time. Giving support session efficiently. giving proper advice will help you build your dream house</p>                       
+                    </div>
+                    <div class="text-3">
+                        <h3>Dexktop & Mobile Version</h3>
+                        <p>through our dexktop and mobile version. You can get free access to all our services 24/7.</p>
+                    </div>
+                    <div class="text-3">
+                        <h3>Drag & Drop Builder</h3>
+                        <p>you can get our most recent update of drag drop feature via our website. Its fast and efficient</p>
+                    </div>
+                    <div class="text-3">
+                        <h3>Awesome Modern Design</h3>
+                        <p>Our design consists various types of colabaration with new tech and designs. its very fun to explore. </p>
+                    </div>
+                    <div class="text-3">
+                        <h3>Super Easy to Edit</h3>
+                        <p>Its so amazing to use. Only if you give it a try.The edit is made easy and effective. </p>
+                    </div>
+                </div>
+                <div class="img-third">
+                    <img src="images/architect.png" alt="">   
+                    <div class="button-third">
+                        <button>10+ Year <br> <span>experience</span> </button>
+                    </div>                
+                </div>               
+            </div>
 
+        </section>
+    
 </body>
 
 </html>
