--- a/index.html
+++ b/index.html
@@ -83,6 +83,35 @@
             </div>
 
         </section>
+        <section class="icon-text-4">
+            <div class="section-4-upper">
+                <h1>Some Facts</h1>
+                <p>We are one of the most renown company in bangladesh <br> with high quality performance and durability. We like to show you <br> guys some statistics of ours.</p>
+            </div>
+            <div class="icon-section">
+                <div class="icon-text">
+                    <img src="images/icons/ribon.png" alt="">
+                    <p class="number">50</p>
+                    <p class="skills">Award winnings</p>
+                </div>
+                <div class="icon-text">
+                    <img src="images/icons/projects.png" alt="">
+                    <p class="number">1450</p>
+                    <p class="skills">Project finished</p>
+                </div>
+                <div class="icon-text">
+                    <img src="images/icons/customers.png" alt="">
+                    <p class="number">600</p>
+                    <p class="skills">Client worked</p>
+                </div>
+                <div class="icon-text">
+                    <img src="images/icons/email.png" alt="">
+                    <p class="number">23000</p>
+                    <p class="skills">Email send</p>
+                </div>
+            </div>
+        </section>
+        
     
 </body>
 
