--- a/index.html
+++ b/index.html
@@ -111,7 +111,19 @@
                 </div>
             </div>
         </section>
-        
+        <section class="sponsor-section">
+            <div class="section-5-upper">
+                <h1>Our Sponspors</h1>
+                <p>Worlds most top companies like to work with us and try to invest in us. <br> Here are some of the companies are below.</p>
+            </div>
+            <div class="sponsor-section-image">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">                              
+            </div>
+        </section>
     
 </body>
 
