finished all sections

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </div>
             <div class="nav-tools">
                 <ul class="nav-list">
-                    <li>home</li>
-                    <li>about</li>
-                    <li>contact us</li>
-                    <li>login</li>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact us</li>
+                    <li>Login</li>
                 </ul>
             </div>
         </div>
@@ -114,7 +114,7 @@
         <section class="sponsor-section">
             <div class="section-5-upper">
                 <h1>Our Sponspors</h1>
-                <p>Worlds most top companies like to work with us and try to invest in us. <br> Here are some of the companies are below.</p>
+                <p>Worlds most top companies like to work with us and try to invest in us. <br> Here are some of the companies below.</p>
             </div>
             <div class="sponsor-section-image">
                 <img src="images/sponsors/amazon.png" alt="">
@@ -153,7 +153,11 @@
                     
                 </div>
             </div>
-
+        </section>
+        <section class="fotter">
+            <div class="copyright">
+                <p class="copyright-text">All rights reserved copyright@2023 startup landing page design.</p>
+            </div>
         </section>
     
 </body>
