--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="second-text">
                     <h2><span class="span-1">Quick list</span> <span class="span-2">of Our</span><br> <span class="span-3">Features</span></h2>
-                    <p>There are many things you can find here. we can give you free consultation. We give high level facility. 24/7 advice about basic design and more. </p>
+                    <p>There are many things you can find here. we can give you <br> free consultation. We give high level facility. 24/7 advice about basic design and more. </p>
                     <button>Explore more</button>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </section>
-        <section class="sponsor-section">
+        <section class="sponsor-section ">
             <div class="section-5-upper">
                 <h1>Our Sponspors</h1>
                 <p>Worlds most top companies like to work with us and try to invest in us. <br> Here are some of the companies below.</p>
