main site overflow removed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body>
+<body class="main-container">
     <header class="hero-section">
         <div class="upper-section">
             <div class="upper-section-title">
